--- a/src/pages/BwtPage.css
+++ b/src/pages/BwtPage.css
@@ -71,7 +71,8 @@ p ul{
     margin-bottom: 10px;
 }
 .bwt-info{
-    background-color: rgba(247, 228, 189, 50%);
+    /* background-color: rgba(247, 228, 189, 50%); */
+    background-color: rgba(255, 255, 255, 50%);
     padding: 1px 3px 1px 3px;
     border-radius: 5px;
 }
